--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1",
     "socket.io": "^4.7.5"
   }
 }
